This submission includes the following changes:  - CSS tweaks for the legend and map toggle buttons in phone display mode  - CSS tweaks to ensure fixed height for upload form that scrolls when overflowing  - Add checkboxes for acceptance of terms and agreement to share uploaded photos under CC-SA. The actual terms and conditions is verbatim copy from the current WKT site and is shown in a bootstrap modal. The submit button in the upload form is disabled until both checkboxes are checked.  - Refactor the photo selection so that both selection of photo markers or clicking on a photo thumbnail brings up the same photo modal dialog.

--- a/WitnessKingTides.Mobile.Web/css/app.css
+++ b/WitnessKingTides.Mobile.Web/css/app.css
@@ -63,10 +63,17 @@ div.olControlTextButtonPanel .olButton:hover {
  * Style tweaks
  * --------------------------------------------------
  */
+@media (min-width: 767px) and (max-width: 992px) {
+    .navbar-btn-label {
+        display: none;
+    }
+}
+
 html,
 body {
     background: url('/images/html-background.jpg');
     overflow-x: hidden; /* Prevent scroll on narrow devices */
+    overflow-y: hidden; /* Prevent scroll on narrow devices */
 }
 body {
     
@@ -148,14 +155,14 @@ footer {
 #sidebar {
     height: 100%;
 }
-#photosPanel { 
+#legend { padding-left: 10px; }
+#photosPanel, #homePanel, #uploadFormPanel { 
     height: 100%; 
 }
-#photosPanel .panel-body {
-    overflow-y: scroll;
+#photosPanel .panel-body, #homePanel .panel-body, #uploadFormPanel .panel-body {
+    overflow-y: auto;
     height: 85%;
 }
-#homePanel { height: 100%; }
 /* #uploadForm { margin-top: 10px; } */
 #sidebarToggler {
     position: absolute;
